datas das provas e trabalhos para o 2024-2

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2024 - Engenharia de Computação</span>
+				<span>Disciplinas 2º Semestre de 2024 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I Lab.</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -90,9 +90,9 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Roteiro prático - 40 pts <b>(22/08)</b> <i><a href="aulas/lab-programacao/Roteiro-Trabalho1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a><!--[ <a href="aulas/lab-programacao/notas-detalhadas-roteiro.pdf"> <b>Notas</b>  ]--></li>
-					<li>Trabalho 2 - 60 pts <b>(11/09)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
-					<li>(<b>Repescagem</b>) Trabalho 3 - 60 pts <b>(12/09)</b> <i><a href="aulas/lab-programacao/Trabalho3-LabES1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
+					<li>Roteiro prático - 40 pts <b>(29/01/25)</b> <!--<i><a href="aulas/lab-programacao/Roteiro-Trabalho1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a><!--[ <a href="aulas/lab-programacao/notas-detalhadas-roteiro.pdf"> <b>Notas</b>  ]--></li>
+					<li>Trabalho 2 - 60 pts <b>(19/02/25)</b> <!--<i><a href="aulas/lab-programacao/Trabalho2-LabES1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a>--></li>
+					<!--<li>(<b>Repescagem</b>) Trabalho 3 - 60 pts <b>(12/09)</b> <i><a href="aulas/lab-programacao/Trabalho3-LabES1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
 					<!--<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li> -->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>-->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2 - 70 pts</a></i> - <b>(Próxima Entrega: 28/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
