--- a/gsi526.html
+++ b/gsi526.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2024 - Engenharia de Computação</span>
+				<span>Disciplinas 2º Semestre de 2024 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -88,36 +88,36 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(09/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
-					<li>Prova 2 - 30 pts <b>(13/08)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12 </i></li>
-					<li>Prova 3 - 30 pts <b>(05/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 13, 14, 15, 16, 17 e 18 </i></li>
-					<li>Lista 1 - 2 pts <b>(09/04)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 2 - 4 pts <b>(13/08)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 3 - 4 pts <b>(05/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<li>Prova 1 - 30 pts <b>(07/11/24)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
+					<li>Prova 2 - 30 pts <b>(17/12/24)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12 </i></li>
+					<li>Prova 3 - 35 pts <b>(11/02/25)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 13, 14, 15, 16, 17 e 18 </i></li>
+					<li>Lista 1 - 1 pts <b>(07/11/24)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 2 - 2 pts <b>(17/12/24)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 3 - 2 pts <b>(11/02/25)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
 					</div> 
 					<div>
 						<b>Material:</b>  
 						<ul> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-plano_do_curso.pptx"> Aula 01 - Apresentação da disciplina</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-sistemas_criticos.pdf"> Aula 02 - Sistemas críticos</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-processos.pptx"> Aula 03 - Processos</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-openUp.pdf"> Aula 04 - OpenUp</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-smells.pptx"> Aula 05 - Reengenharia, Refatoração e Bad Smells</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-reuso.pptx"> Aula 06 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-arquitetura.pptx"> Aula 08 - Arquitetura de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-padroes-arquiteturais.pptx"> Aula 09 - Padrões Arquiteturais: Camadas, MVC e Microservices </a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Hexagonal </a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=JxgaUJmWVQQ"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Serverless </a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=osPbeoscOQE"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-qualidade.pptx"> Aula 11 - Qualidade de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-testes.pptx"> Aula 12 - Testes de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-controle-versao.pptx"> Aula 13 - Sistemas de Controle de Versão</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-idiomas-programacao.pptx"> Aula 14 - Idiomas de Programação</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-devops.pptx"> Aula 15 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-principios-de-projeto.pptx"> Aula 16 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula17-padroes-de-projeto.pptx"> Aula 17 - Padrões de projeto (Parte 1)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula18-padroes-de-projeto.pptx"> Aula 18 - Padrões de projeto (Parte 2)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-sistemas_criticos.pdf"> Aula 02 - Sistemas críticos</a></button>--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-processos.pptx"> Aula 03 - Processos</a></button>--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-openUp.pdf"> Aula 04 - OpenUp</a></button>--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-smells.pptx"> Aula 05 - Reengenharia, Refatoração e Bad Smells</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-reuso.pptx"> Aula 06 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-arquitetura.pptx"> Aula 08 - Arquitetura de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-padroes-arquiteturais.pptx"> Aula 09 - Padrões Arquiteturais: Camadas, MVC e Microservices </a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Hexagonal </a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=JxgaUJmWVQQ"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Serverless </a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=osPbeoscOQE"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-qualidade.pptx"> Aula 11 - Qualidade de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-testes.pptx"> Aula 12 - Testes de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-controle-versao.pptx"> Aula 13 - Sistemas de Controle de Versão</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-idiomas-programacao.pptx"> Aula 14 - Idiomas de Programação</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-devops.pptx"> Aula 15 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-principios-de-projeto.pptx"> Aula 16 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula17-padroes-de-projeto.pptx"> Aula 17 - Padrões de projeto (Parte 1)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula18-padroes-de-projeto.pptx"> Aula 18 - Padrões de projeto (Parte 2)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)--></li>
 						</ul> 
 					</div> 
 					<!--<div>
@@ -135,9 +135,9 @@
 					<div>
 					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>09/04</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>13/08</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li> 
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>05/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>07/11/24</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>13/08</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19">--></li> 
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>05/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
