--- a/gsi526.html
+++ b/gsi526.html
@@ -76,15 +76,15 @@
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<!--<div>
-					<b>Plano e Temas:</b>
+					<div>
+					<b>Plano didático:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Plano-Didático-ES-2024.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
+					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano-Didático-ES-2024-2 1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"> Temas de TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
-					</div>-->
+					</div>
 					<div>
 					<b>Avaliação:</b>
 					<ul>
