--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -78,11 +78,10 @@
 				<div class="fh5co-entry padding">
 					<!--<h2>- Haverá apresentação do trabalho 3 no dia 01/12!</h2>-->
 					<div>
-					<b>Livro:</b>
+					<b>Plano didático e Livro:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 03.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 04.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024-2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
 					<div>
