--- a/poo-python.html
+++ b/poo-python.html
@@ -76,10 +76,10 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-					<b>Livro:</b>
+					<b>Plano didático e Livro:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/Plano-Didático-PC2-2024.1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/backes/Plano-Didático-PC2-2024-2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/backes/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
 					<div>
