--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -123,8 +123,8 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Git.pptx"> Aula 01 - Git e Github</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - HTML.pdf"> Aula 02 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Git.pptx"> Aula 01 - Git e Github</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - HTML.pdf"> Aula 02 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - CSS.pdf"> Aula 03 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="https://nodejs.dev/pt/learn/introduction-to-nodejs"> Aula 04 - NODE.JS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=iORW8s3O_xc&t=2591s"> Ver Videoaula </a>)</li>
