Relacao dos grupos de Lab. ES

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -80,7 +80,7 @@
 					<b>Plano didático e Grupos do Trabalho:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/Plano-Didatico-LAB-ES-2024-2 1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Roteiro_Trabalho2.pdf"> Roteiro de Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_grupos.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>					
