--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -88,7 +88,7 @@
 					<b>Grupos dos Trabalhos e Roteiros:</b>
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
@@ -117,8 +117,8 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 1.pdf"> Exercício Prático 1</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 3.pdf"> Exercício Prático 3</a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 4.pdf"> Exercício Prático 4</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 5.pdf"> Exercício Prático 5</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 4.pdf"> Exercício Prático 4</a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 5.pdf"> Exercício Prático 5</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 6.pdf"> Exercício Prático 6</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 7.pdf"> Exercício Prático 7</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 8.pdf"> Exercício Prático 8</a></li>
