--- a/poo-python.html
+++ b/poo-python.html
@@ -85,7 +85,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(19/11/24)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)--></li>
+					<li>Prova 1 - 30 pts <b>(19/11/24)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
 					<li>Prova 2 - 35 pts <b>(17/12/24)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06, 07 e 08 </i>)--></li>
 					<li>Prova 3 - 35 pts <b>(11/02/25)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
 					<!--<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
@@ -100,6 +100,7 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAoPython.ppt"> Aula 01 - Introdução ao Python</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-Listas_Tuplas_Dicionarios.pptx"> Aula 02 - Listas, Tuplas e Dicionários</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-Strings.pptx"> Aula 03 - Strings</a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Funcoes.pptx"> Aula 04 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-AlgoritmosFluxogramas.pptx"> Aula 02 - Algoritmos e Fluxogramas</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-VariaveisExpressoes.pptx"> Aula 03 - Variáveis e Expressões</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Condicional.pptx"> Aula 04 - Comandos Condicionais</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
