--- a/gsi526.html
+++ b/gsi526.html
@@ -136,7 +136,7 @@
 					<b>Listas:</b> 
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>07/11/24</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>13/08</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19">--></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>17/12/24</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>05/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
