Espec. do Trabalho 2 de Lab. ES1

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -91,7 +91,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Roteiro prático - 40 pts <b>(11/12/2024)</b> <i><a href="aulas/lab-programacao/Roteiro-Trabalho1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a><!--[ <a href="aulas/lab-programacao/notas-detalhadas-roteiro.pdf"> <b>Notas</b>  ]--></li>
-					<li>Trabalho 2 - 60 pts <b>(19/02/25)</b> <!--<i><a href="aulas/lab-programacao/Trabalho2-LabES1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a>--></li>
+					<li>Trabalho 2 - 60 pts <b>(19/02/25)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
 					<!--<li>(<b>Repescagem</b>) Trabalho 3 - 60 pts <b>(12/09)</b> <i><a href="aulas/lab-programacao/Trabalho3-LabES1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
 					<!--<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li> -->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>-->
