--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -81,7 +81,7 @@
 					<b>Plano didático e Livro:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024-2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					</ul>
 					</div>
 					<div>
