--- a/poo-python.html
+++ b/poo-python.html
@@ -87,7 +87,7 @@
 					<ul>
 					<li>Prova 1 - 30 pts <b>(19/11/24)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
 					<li>Prova 2 - 35 pts <b>(17/12/24)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
-					<li>Prova 3 - 35 pts <b>(11/02/25)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
+					<li>Prova 3 - 35 pts <b>(11/02/25)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
 					<!--<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					<!--<li>Lista 01 - 7,5 pts <b>(18/10)</b></li>-->
 					<!--<li>Lista 02 - 7,5 pts <b>(06/12)</b></li>-->
