exercicios praticos lab. pc2 python

--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -114,7 +114,7 @@
 					<div>					
 					<b>Material:</b> 
 					<ul>						
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 1.pdf"> Exercício Prático 1</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 1.pdf"> Exercício Prático 1</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 3.pdf"> Exercício Prático 3</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 4.pdf"> Exercício Prático 4</a></li>
@@ -124,7 +124,7 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 8.pdf"> Exercício Prático 8</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 9.pdf"> Exercício Prático 9</a></li>
 					</ul>
-					</div>-->
+					</div>
 					<!-- <div>
 					<b>Videoaulas:</b> 
 					<ul>
