Atualização dos sites das disciplinas do 2025-1

--- a/gsi526.html
+++ b/gsi526.html
@@ -68,8 +68,8 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2024 - Engenharia de Computação</span>
-				<h2>Engenharia de Software I</h2>
+				<span>Disciplinas 1º Semestre de 2025 - Engenharia de Computação</span>
+				<h2>Engenharia de Software II</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
 		</div>
@@ -79,7 +79,7 @@
 					<div>
 					<b>Plano didático:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano-Didático-ES-2024-2 1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano-Didático-ES2-2025-1_1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"> Temas de TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
@@ -88,12 +88,12 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(07/11/24)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
-					<li>Prova 2 - 30 pts <b>(17/12/24)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12 </i></li>
-					<li>Prova 3 - 35 pts <b>(11/02/25)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 13, 14, 15, 16, 17 e 18 </i></li>
-					<li>Lista 1 - 1 pts <b>(07/11/24)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 2 - 2 pts <b>(17/12/24)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 3 - 2 pts <b>(11/02/25)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<li>Prova 1 - 30 pts <b>(29/04/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i>--></li>
+					<li>Prova 2 - 30 pts <b>(04/06/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12 </i>--></li>
+					<li>Prova 3 - 30 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 13, 14, 15, 16, 17 e 18 </i>--></li>
+					<li>Lista 1 - 2 pts <b>(29/04/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 2 - 4 pts <b>(04/06/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 3 - 4 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
 					</div> 
 					<div>
@@ -136,9 +136,9 @@
 					<div>
 					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>07/11/24</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>17/12/24</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li> 
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>11/02/25</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>29/04/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>04/06/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>16/07/2025</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
