--- a/material.html
+++ b/material.html
@@ -69,7 +69,7 @@
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<!--<span>November 10, 2017</span>-->
-				<h2>Disciplinas 2º Semestre de 2024<br>CEFET-MG</h2>
+				<h2>Disciplinas 1º Semestre de 2025<br>CEFET-MG</h2>
 				<span>Prof. Dr. Eduardo Cunha Campos</span>
 			</div>
 		</div>
@@ -78,13 +78,14 @@
 				<div class="fh5co-entry padding">
 					<div>
 						<ul>
-						<li><a href="gsi526.html"><i class="icon-home"></i><i> Engenharia de Software I <b>(Terça e Quinta: 10h40 - 12h20)</b></i></a></li> 
-						<li><a href="poo-python.html"><i class="icon-home"></i><i> Programação de Computadores 2 <b>(Terça: 13h30 - 14h40)</b></i></a></li>
+						<li><a href="gsi526.html"><i class="icon-home"></i><i> Engenharia de Software II <b>(Terça: 07h00 - 08h40 e Quarta: 10h40 - 12h20)</b></i></a></li> 
+						<li><a href="poo-python.html"><i class="icon-home"></i><i> Programação de Computadores 2 <b>(Terça: 13h00 - 14h40)</b></i></a></li>
 						<!--<li><a href="poo.html"><i class="icon-home"></i><i> Programação de Computadores 2 (Teoria) <b>(Java)</b></i></a></li>-->
-						<li><a href="gsi526-lab.html"><i class="icon-home"></i><i> Engenharia de Software I Lab. <b>(Quarta: 08h50 - 12h20)</b></i></a></li> 
-						<li><a href="poo-lab-python.html"><i class="icon-home"></i><i> Programação de Computadores 2 Lab. <b>(Sexta: 13h00 - 16h30)</b></i></a></li>
-						<!-- <li><a href="gsi570.html"><i class="icon-home"></i><i> Programação Lógica <b>(Terça: 08h50 - 10h30 / Quinta: 08h50 - 10h30)</b></i></a></li> -->
-						<!-- <li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software <b>(Terça: 14h50 - 16h50 / Quarta: 13h10 - 14h50)</b></i></a></li>
+						<!--<li><a href="gsi526-lab.html"><i class="icon-home"></i><i> Engenharia de Software I Lab. <b>(Quarta: 08h50 - 12h20)</b></i></a></li>-->
+						<li><a href="lab-pc1.html"><i class="icon-home"></i><i> Programação de Computadores 1 Lab. <b>(Sexta: 08h50 - 10h30)</b></i></a></li>
+						<li><a href="poo-lab-python.html"><i class="icon-home"></i><i> Programação de Computadores 2 Lab. <b>(Sexta: 14h50 - 18h20)</b></i></a></li>
+						<!--<li><a href="gsi570.html"><i class="icon-home"></i><i> Programação Lógica <b>(Terça: 08h50 - 10h30 / Quinta: 08h50 - 10h30)</b></i></a></li> -->
+						<!--<li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software <b>(Terça: 14h50 - 16h50 / Quarta: 13h10 - 14h50)</b></i></a></li>
 						<li><a href="gsi526.html"><i class="icon-home"></i><i> GSI526 - Engenharia de Software <b>(Quarta: 08h50 - 10h40 / Quinta: 10h40 - 12h20)</b></i></a></li>
 						<li><a href="gsi538.html"><i class="icon-home"></i><i> GSI538 - Projeto e Desenvolvimento de Sistemas de Informação 2 <b>(Terça: 08h50 - 12h20)</b></i></a></li> -->
 						</ul>
