--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2024 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2025 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -80,31 +80,32 @@
 					<div>
 					<b>Plano didático e Livro:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024-2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab.-PC2-2025.1-Turma-03_1 1.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab.-PC2-2025.1-Turma-04_1 1.pdf"> Plano Didático - Turma 04<img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
-					<div>
+					<!--<div>
 					<b>Grupos dos Trabalhos e Roteiros:</b>
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
-					</div>			
+					</div>-->		
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(08/11/24)</b> <a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 2 - 30 pts <b>(17/01/25)</b> <a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 3 - 30 pts <b>(14/02/25)</b> <a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Exercícios Práticos - 10 pts <b>(17/01/25)</b>  <i>Ex. 2, Ex. 3, Ex. 5 e Ex. 9</i> <!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Trabalho 1 - 30 pts <b>(09/05/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 2 - 30 pts <b>(13/06/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 3 - 30 pts <b>(18/07/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Exercícios Práticos - 10 pts <b>(27/06/2025)</b>  <!--<i>Ex. 2, Ex. 3, Ex. 5 e Ex. 9</i> <!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
