materia da prova 1 de pc2

--- a/poo-python.html
+++ b/poo-python.html
@@ -85,7 +85,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(06/05/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)--></li>
+					<li>Prova 1 - 30 pts <b>(06/05/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
 					<li>Prova 2 - 35 pts <b>(03/06/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)--></li>
 					<li>Prova 3 - 35 pts <b>(15/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)--></li>
 					<!--<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
@@ -100,7 +100,7 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAoPython.ppt"> Aula 01 - Introdução ao Python</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-Listas_Tuplas_Dicionarios.pptx"> Aula 02 - Listas, Tuplas e Dicionários</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-Strings.pptx"> Aula 03 - Strings</a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Funcoes.pptx"> Aula 04 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Funcoes.pptx"> Aula 04 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython05-Arquivos.pptx"> Aula 05 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython06-Classes.pptx"> Aula 06 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython07-Heranca_e_Polimorfismo.pptx"> Aula 07 - Herança e Polimorfismo </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
