alteracao da data da prova de lab. pc1

--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -84,7 +84,7 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
-					<div>
+					<!--<div>
 					<b>Grupos dos Trabalhos e Roteiros:</b>
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
@@ -95,13 +95,13 @@
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
-					</div>			
+					</div>-->			
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova - 20 pts <b>(25/04/2025)</b></a></li>
+					<li>Prova - 20 pts <b>(16/05/2025)</b></a></li>
 					<li>Exercícios - 40 pts <b>(11/07/2025)</b> <!--<i>Todos os exercícios</i> <!--<a href="aulas/lab-pc1/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<li>Trabalho - 40 pts <b>(18/07/2025)</b> <!--<a href="aulas/lab-pc1/Trabalho1-PC1.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-pc1/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
