exercicios de V ou F

--- a/gsi526.html
+++ b/gsi526.html
@@ -121,6 +121,14 @@
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-qualidade.pptx"> Aula 11 - Qualidade de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)--></li>
 						</ul> 
 					</div> 
+					<div>
+					<b>Exercícios de Verdadeiro ou Falso:</b> 
+					<ul>
+					<li><i class="icon-book"></i><a href="https://engsoftmoderna.info/exercicios/exvf.html#/cap/2" target="_blank"> Cap. 2 - Processos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="https://engsoftmoderna.info/exercicios/exvf.html#/cap/3" target="_blank"> Cap. 3 - Requisitos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href= "https://engsoftmoderna.info/exercicios/exvf.html#/cap/9" target="_blank"> Cap. 9 - Refactoring <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					</ul>
+					</div>
 					<!--<div>
 					<b>Aulas Síncronas Gravadas no Teams:</b> 
 					<ul>
